# python-fastapi-template

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: format.yml  pytest.yml
app/: main.py
app/requests/: __init__.py  capitalize_request.py
app/responses/: __init__.py  capitalize_response.py
app/routers/: dummy.py
app/v1/dependencies/: __init__.py
app/v1/models/: __init__.py  user.py
app/v1/routers/: __init__.py  base.py  base_router.py  dummy.py  users.py
app/v1/serializers/: dummy.py
app/v1/services/: __init__.py
app/v1/services/user/: dependency.py  user_manager.py
tests/: conftest.py  test_main.py
tests/routers/: test_dummy.py
tests/v1/routers/: test_dummy.py  test_users.py
