[tool.poetry]
name = "python-fastapi-template"
version = "0.1.0"
description = "A template for a Python FastAPI service with Poetry & Devcontainer"
authors = ["Ibraheem Tuffaha <ibraheem@milkstraw.ai>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["app"]
