[tool.poetry]
name = "python-fastapi-template"
version = "0.1.0"
description = "A template for a Python FastAPI service with Poetry & Devcontainer"
authors = ["Ibraheem Tuffaha <ibraheem.z.tuffaha@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.x"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"
autoflake = "^2.3.1"
wemake-python-styleguide = "^0.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["app"]
lines_between_types = 1
lines_after_imports = 2

[tool.mypy]
strict = true
pretty = true
